# mirea-siaod-cpp

./: CMakeLists.txt  main.cpp
Extensions/: extensions.cpp  extensions.h
Practice5/: practice5_1.cpp  practice5_1.h  practice5_2.cpp  practice5_2.h
Practice6/6_1/: practice6_1.cpp  practice6_1.h
Practice6/6_1/hash_table/: num_hash_table.h
Practice6/6_2/: practice6_2.cpp  practice6_2.h
Practice6/6_2/task1/: task1_input.txt  task1_output.txt
Practice6/6_2/task2/: task2_input.txt  task2_input_best.txt  task2_input_best_s.txt
